css/normal.css
body {
  color: #222222;
  font-size: 1em;
  font-family: "Open Sans", "Helvetica Neue", sans-serif;
}

.cssButtonContainer {
  height: 40px;
  position: relative; 
  margin: 10px;
}

.cssButton {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.content-footer,
.masthead-heading,
.masthead-intro {
text-align: center;
}

.masthead {
padding: 6em 0;
background-image: url('../img/code.jpg');
background-size: cover;
background-repeat: no-repeat;
}

.masthead-intro {
  margin-bottom: 0.1em;
  font-size: 2em;
  color: #ffffff;
}

.masthead-heading {
  margin-top: -0.2em;
  font-weight: bold;
  font-size: 6em;
  letter-spacing: -0.02em;
  text-transform: uppercase;
  color: #ffffff;
}

.details {
  max-width: 38em;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2em;
}

.details > p {
  font-weight: 300;
  letter-spacing: 0.05em;
}

.details > h2 {
  font-size: 1.2em;
  font-weight: bold;
  margin: 2em 0 1em 0;
}

section > h1 {
  margin-top: 2em;
}

#footer {
padding: 20px 0;
text-align: center;
background-color: #111111;
text-decoration: none;
}

#footer a {
color: #ffffff;
}
.social > li {
display: inline-block;
margin: 0 5px;
}

